[package]
name = "proto-packet-clu"
version = "0.0.0"
description = "This repository provides the ProtoPacket command line utility."
readme = "README.md"
repository = "https://github.com/nikdeapen/proto-packet-clu"
homepage = "https://github.com/nikdeapen/proto-packet-clu"
authors = ["Nik Deapen <nik@deapen.com>"]
edition = "2018"
license = "MIT"

[dependencies]

